--- a/PizzariaGPTCrud/pom.xml
+++ b/PizzariaGPTCrud/pom.xml
@@ -57,6 +57,11 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.15.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
